kubernetes/modules/kafka/manifests/kafka-manager.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-manager
  namespace: kafka
  labels:
    app: kafka-manager
    service: kafka-manager
spec:
  ports:
    - port: 9000
      name: http
  selector:
    app: kafka-manager
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka-manager
  template:
    metadata:
      labels:
        app: kafka-manager
    spec:
      containers:
        - name: kafka-manager
          image: hlebalbau/kafka-manager
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: cloud.google.com/gke-preemptible
                    operator: Exists
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-manager
  namespace: kafka
spec:
  hosts:
    - kafka-manager.tenlastic.com
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - route:
        - destination:
            host: kafka-manager
            port:
              number: 9000
