kubernetes/modules/kafka/manifests/kafka-rest-proxy.yml
apiVersion: v1
kind: Service
metadata:
  name: kafka-rest-proxy
  namespace: kafka
  labels:
    app: kafka-rest-proxy
    service: kafka-rest-proxy
spec:
  ports:
    - port: 8082
      name: http
  selector:
    app: kafka-rest-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-rest-proxy
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: kafka-rest-proxy
  template:
    metadata:
      labels:
        app: kafka-rest-proxy
    spec:
      containers:
        - name: kafka-rest-proxy
          image: confluentinc/cp-kafka-rest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: tenlastic.com/low-priority
                    operator: Exists
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-rest-proxy
  namespace: kafka
spec:
  hosts:
    - kafka-proxy.tenlastic.com
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - route:
        - destination:
            host: kafka-rest-proxy
            port:
              number: 8082
